force-app/main/default/objects/PurchaseRequestLineItem__c/fields/CheckProductCertificate__c.field-meta.xml
<CustomField>
    <fullName>CheckProductCertificate__c</fullName>
    <formula>IF(ProductId__r.CheckCertificate__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Product Certificate</label>
    <type>Checkbox</type>
</CustomField>