force-app/main/default/objects/PurchaseRequestLineItem__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContractId</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>PRItemContractId</relationshipLabel>
    <relationshipName>PRItemContractId</relationshipName>
    <type>Lookup</type>
</CustomField>