force-app/main/default/objects/PurchaseRequestLineItem__c/fields/DeliveryRequestDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRequestDate__c</fullName>
    <label>Delivery Request Date</label>
    <type>Date</type>
</CustomField>