force-app/main/default/objects/PurchaseRequestLineItem__c/fields/DeliveryRequestLocation__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRequestLocation__c</fullName>
    <label>Delivery Request Location</label>
    <type>TextArea</type>
</CustomField>