force-app/main/default/objects/PurchaseRequestLineItem__c/fields/DropReason__c.field-meta.xml
<CustomField>
    <fullName>DropReason__c</fullName>
    <formula>TEXT(PurchaseRequest__r.DropReason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drop Reason</label>
    <type>Text</type>
</CustomField>