force-app/main/default/objects/PurchaseRequestLineItem__c/fields/FM_RequestAmount__c.field-meta.xml
<CustomField>
    <fullName>FM_RequestAmount__c</fullName>
    <formula>RequestPrice__c *  RequestQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>