force-app/main/default/objects/PurchaseRequestLineItem__c/fields/IsDirectOrder__c.field-meta.xml
<CustomField>
    <fullName>IsDirectOrder__c</fullName>
    <formula>Price__r.IsDirectOrder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsDirectOrder</label>
    <type>Checkbox</type>
</CustomField>