force-app/main/default/objects/PurchaseRequestLineItem__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price</label>
    <referenceTo>Price__c</referenceTo>
    <relationshipLabel>PritemE9Th</relationshipLabel>
    <relationshipName>PritemE9Th</relationshipName>
    <type>Lookup</type>
</CustomField>