force-app/main/default/objects/PurchaseRequestLineItem__c/fields/PriceLimit__c.field-meta.xml
<CustomField>
    <fullName>PriceLimit__c</fullName>
    <label>Price Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>