force-app/main/default/objects/PurchaseRequestLineItem__c/fields/PRNumber__c.field-meta.xml
<CustomField>
    <fullName>PRNumber__c</fullName>
    <formula>PurchaseRequest__r.PRNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Request Number</label>
    <type>Text</type>
</CustomField>