force-app/main/default/objects/PurchaseRequestLineItem__c/fields/ProductGroupLevel2__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupLevel2__c</fullName>
    <formula>ProductId__r.ProductGroupLevel2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group Level2</label>
    <type>Text</type>
</CustomField>