force-app/main/default/objects/PurchaseRequestLineItem__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductId</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product__c.Orderable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Purchase Request Product(Product)</relationshipLabel>
    <relationshipName>Product2Kbzr</relationshipName>
    <type>Lookup</type>
</CustomField>