force-app/main/default/objects/PurchaseRequestLineItem__c/fields/PurchaseRequest__c.field-meta.xml
<CustomField>
    <fullName>PurchaseRequest__c</fullName>
    <label>Purchase Request</label>
    <referenceTo>PurchaseRequest__c</referenceTo>
    <relationshipLabel>PurchaseRequestItem</relationshipLabel>
    <relationshipName>PurchaseRequestItem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>