force-app/main/default/objects/PurchaseRequestLineItem__c/fields/PurchaseRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>PurchaseRequestStatus__c</fullName>
    <formula>TEXT(PurchaseRequest__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Request Status</label>
    <type>Text</type>
</CustomField>