force-app/main/default/objects/PurchaseRequestLineItem__c/fields/PurchaseType__c.field-meta.xml
<CustomField>
    <fullName>PurchaseType__c</fullName>
    <formula>TEXT(PurchaseRequest__r.PurchaseType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Type</label>
    <type>Text</type>
</CustomField>