force-app/main/default/objects/PurchaseRequestLineItem__c/fields/RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy__c</fullName>
    <formula>PurchaseRequest__r.RequestedBy__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested By</label>
    <type>Text</type>
</CustomField>