force-app/main/default/objects/PurchaseRequestLineItem__c/fields/RequestedDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedDate__c</fullName>
    <formula>PurchaseRequest__r.RequestedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>