force-app/main/default/objects/PurchaseRequestLineItem__c/fields/RequesterDepartment__c.field-meta.xml
<CustomField>
    <fullName>RequesterDepartment__c</fullName>
    <formula>PurchaseRequest__r.RequestedBy__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester Department</label>
    <type>Text</type>
</CustomField>